--- a/index.html
+++ b/index.html
@@ -261,20 +261,20 @@
         </div>
     </section>
     <section id="footer">
-        <div class="container footer">
-            <div class="footercontent">
+        <div class="container">
+            <!-- <div class="footercontent"> -->
+            <div class="coffeaddress">
+                <h2><i class="fa fa-coffee"></i> Coffee</h2>
+                <p>Coffee is a cafe that serve many variant of coffee and other dishes with very comfortable place.
+                </p>
+                <p>Some images used on this website are credited to <span>Coffee Geek TV</span></p>
                 <div class="">
-                    <h2><i class="fa fa-coffee"></i> Coffee</h2>
-                    <p>Coffee is a cafe that serve many variant of coffee and other dishes with very comfortable place.
-                    </p>
-                    <p>Some images used on this website are credited to <span>Coffee Geek TV</span></p>
-                    <div class="">
-                        <address class="fa fa-location">USA Californa 65 South Fifth St.Sicklerville, NJ 08081</address>
-                    </div>
+                    <address class="fa fa-location">USA Californa 65 South Fifth St.Sicklerville, NJ 08081</address>
                 </div>
-
+            </div>
+            <div class="coffeefooterlink">
                 <div class="Facility1">
-                    <h5>Facility</h5>
+                    <li><span>Facility</span></li>
                     <li> Room</li>
                     <li>Meeting Room</li>
                     <li>Event Room</li>
@@ -282,19 +282,20 @@
                     <li>Custom Room</li>
                 </div>
                 <div class="Facility2">
-                    <h5>Facility</h5>
+                    <li><span>Facility</span></li>
                     <li>Coffee</li>
                     <li>Beverages</li>
                     <li>Dishes</li>
                 </div>
                 <div class="Support">
-                    <h5>Support</h5>
+                    <li><span>Support</span></li>
                     <li> Us</li>
                     <li>FAQs</li>
                     <li>Private Policy</li>
                     <li>Help Us</li>
                 </div>
             </div>
+            <!-- </div> -->
         </div>
         <div class="right" style="color: white;">© All rigths reserved</div>
     </section>
